--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "laravel/tinker": "^1.0",
         "yajra/laravel-datatables-oracle": "^9.7"
     },
-    "require-dev": {
+    "require": {
         "facade/ignition": "^1.4",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
