--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME="3PS API DEVELOPMENT"
 APP_ENV=local
 APP_KEY=base64:9wsfZU4tMKJZ4787U6tVb9M7iV6CX02nrxTLqH0fIeI=
 APP_DEBUG=true
-APP_URL=http://trial.api.tigapermatasystem.test
+APP_URL=https://trial-api-tigapermatasystem.herokuapp.com
 
 LOG_CHANNEL=stack
 
